# messing-with-rp2040

./: CMakeLists.txt  README.md  io.c  io.h  main.S  main.c  main.h  memory.h  registers.h  sio.h  toolchain-arm.cmake
